# ChangeLog for xfce-base/xfdesktop
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.262 2015/07/19 12:38:56 klausman Exp $

  19 Jul 2015; Tobias Klausmann <klausman@gentoo.org> xfdesktop-4.12.2.ebuild:
  Stable on alpha, bug 553500

  12 Jul 2015; Jeroen Roovers <jer@gentoo.org> xfdesktop-4.12.2.ebuild:
  Stable for PPC64 (bug #553500).

  11 Jul 2015; Markus Meier <maekke@gentoo.org> xfdesktop-4.12.2.ebuild:
  arm stable, bug #553500

  01 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> xfdesktop-4.12.2.ebuild:
  amd64 stable wrt bug #553500

  01 Jul 2015; Jason Zaman <perfinion@gentoo.org> -xfdesktop-4.11.8.ebuild,
  -xfdesktop-4.12.0.ebuild, -xfdesktop-4.12.1.ebuild:
  drop old

  01 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> xfdesktop-4.12.2.ebuild:
  x86 stable wrt bug #553500

  01 Jul 2015; Jeroen Roovers <jer@gentoo.org> xfdesktop-4.12.2.ebuild:
  Stable for HPPA (bug #553500).

*xfdesktop-4.12.2 (17 May 2015)

  17 May 2015; Michał Górny <mgorny@gentoo.org> +xfdesktop-4.12.2.ebuild:
  Version bump with some bugfixes.

  01 Apr 2015; Michał Górny <mgorny@gentoo.org>
  +files/xfdesktop-4.12.1-no-thunar-build.patch, xfdesktop-4.12.1.ebuild:
  Fix build failure with USE=-thunar, bug #544260.

*xfdesktop-4.12.1 (22 Mar 2015)

  22 Mar 2015; Michał Górny <mgorny@gentoo.org> +xfdesktop-4.12.1.ebuild:
  Version bump with bugfixes. Add slot operators to deps.

*xfdesktop-4.12.0 (08 Mar 2015)

  08 Mar 2015; Michał Górny <mgorny@gentoo.org> +xfdesktop-4.12.0.ebuild:
  Xfce 4.12 version bump, bug #541962. https://github.com/gentoo/gentoo-portage-
  rsync-mirror/pull/63 by me and damex.

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> xfdesktop-4.11.8.ebuild:
  add arm64 support, tested on A53 board

  16 Sep 2014; Samuli Suominen <ssuominen@gentoo.org> -xfdesktop-4.11.7.ebuild:
  old

*xfdesktop-4.11.8 (16 Sep 2014)
