@@ -4,16 +4,28 @@ Hash: SHA256
 AUX xfdesktop-4.12.1-no-thunar-build.patch 1106 SHA256 2a44599a758209419a49fa6499091a6cdac12e1098b7dbb0a3c7579c2c9393ed SHA512 c1a8dcfccbe75033b443ddf61d5219a013f7be77feafceb377c4a3ce6057b11f0afbab0ac8c085876e904498b3404e014bd90461f4cb0412fdb9149b2d5772bb WHIRLPOOL e73af5f8111b01233f509c9f70b6e77d3c70c4c0c72a84fb7f2997e115ccd16aa1bc066a1e282d12e7c7e4e85b02eb50e27ced2c767892d07e34dfcc9b7c2154
 DIST xfdesktop-4.10.2.tar.bz2 1144561 SHA256 49a6e0be513e307e896f7e5929825babec9bbcd4b2e73552f9d27647a4db797d SHA512 274e61fc08ab7738584a27cabce897bd3692200ffe88ad5542bf3c3d6fba128166a499b8aca2b571501d9c66cafa1b3af6a9d52638e20dee7dc79dc5ea48544c WHIRLPOOL 5f3b0ffcc7baf2cbc0d864038f38691f8ae60f60288ae558754d0a503373fd31ba49c605ae512c51e78614eaacb4e3c414f07bd1d46dcd151e10154486325e9f
 DIST xfdesktop-4.12.2.tar.bz2 1419922 SHA256 c9788883163b57bac39d12e5f8310c869d176454879defb78b67f8e9f1ad5225 SHA512 b83f3d632b47593a6a600f508c06a097e77794cae8caa6e9c5c86300d1ebdb12967bdbd6638179c8b41855216ab534db2fae7f3bba2bda18e8fb8fb7c6966121 WHIRLPOOL e610ea2879834052623c2d984baacd803ec8e7de0a212676f25b776f1c417f4c244580f42f2fefb4346d4fc7b597d7bef63e4dace7b2ff61a8f0cc6d43d222a5
+DIST xfdesktop-4.12.3.tar.bz2 1420704 SHA256 a8a8d93744d842ca6ac1f9bd2c8789ee178937bca7e170e5239cbdbef30520ac SHA512 e8c89640722d3dfb2c5aae09779f81e5e2a6e157cc4756a46139547bd1a5b1977fa828f68e8ea61d6c9483c35a9303169fc33cbeacde06f7e95e19c65ce54878 WHIRLPOOL ce6fbfa82b9ac753b640035c458c2d81cea76500c6905933c343b061c5f66192926dcc47baa0f72f2a55579212cc0a297538f5f1d913b026f0d5b88f4211e9d8
 EBUILD xfdesktop-4.10.2.ebuild 1291 SHA256 47b1323c03caf58e350c0dece77bd4c79eced49dc66a19775d173fe1efa39906 SHA512 930b66e05b127d74565b58d83764edd7086ddfe9fba114e69963baa3d29816d59a08af017ed76b32837b23284a9345ba3b072ff3e5012097f9343f8d297e9d14 WHIRLPOOL 86d5f2738994ec7cb46ed11946fa9c078500f96bed0c441d9221b1dcd768b0f9037e5c7255e097b35cb5e7dd7b1c2c2d7f418baeae963ebb49e8b001775daedd
 EBUILD xfdesktop-4.12.2.ebuild 1423 SHA256 82bd6f53eee55d89a778c3383075e978866379929f72a1c7b3e42548819fc07c SHA512 aa975cbe9bd7873d6e33a852896bb157970da18f6fc2df69546b155bb0e16f6cbdc9f83131adfd1d9eb273cd35a94b7ba87c42eb05528c2a5eae48ba5a4a0f91 WHIRLPOOL f5696e22397d800e910bd62ac87fae885c683ec13c9cdc8d36ac07516bdb79b307dc4b2a8040d1ee5929d076e90d7e2807a4952a28637a1e3b1221148ea13b24
-MISC ChangeLog 32717 SHA256 05413a4e2d62118cc3077274971880ed3520e854b873ab9f09bb4b75ed462221 SHA512 0c2c989013c524dd574396bb2dd06fd7d6c95a2078155018c6214a2fa105a83be292995e00532059460cbe03de32d125fb19a98280f481261bf073b00789e0be WHIRLPOOL 2e01ceefe26cd34b08a56bad300ccac18206f1302acdb64830d835607ed9b4a63dc142f13332dd324f1233720101e7695043301cbcac3efbc74ee46d8693ae12
+EBUILD xfdesktop-4.12.3.ebuild 1427 SHA256 4b8cdf5eebf1bf2336a70129a86b16d1147048b6c3f1390b048001592ca166df SHA512 95259e97c645c172fd57c6d4f989ae543c5310401a199f3defab4253b55a592d48441a897ffd6daed66492b56faa01cac2f3529c17a1a186535ee06575ff85e7 WHIRLPOOL 83b8f01b48bbba8e8963ab1d3722dbce5912670fcf43c31845045a77be49a072a603230e0d8984c08e6d470a9a7ecc93037185d8dbfb47dc0b0baf8e42122b8e
+MISC ChangeLog 32879 SHA256 3c6d56f9531b3c10eaa01a9da73a50652c6799942a415ed303f4c34078911588 SHA512 409d4e5228982bd997462c00e1c214369406942c7c41f0d576137891408bc4316ee7d97007775fb4dffa875d5ef8231c16b0ad7c658dec40e570fb7d10df47f1 WHIRLPOOL 6a22b1ff6e4b4eb468f321dc962edc9b71dd060b6349ab347e9a5eb41ac0cc0251a8eb8d92fddaac45f78dc32c5a9847394907acba8584a0debd8409d7c944ad
 MISC metadata.xml 276 SHA256 02ac0bb7333dd11cef3a53b2d3c3cc744406509d104d37bd8bd31641646d8ae4 SHA512 dcf457c4c23b1ca2fa17ac689d29ac59a67475aa6c836fd65562f95084b42d8d763af6e90ea6db4fd1d0fc572d58c12a2fa269eb58c736a9317eb9859369bd1e WHIRLPOOL 79acb0d5a077a29a51c63f73a3f8ec1b1ab78a3c381f6dbae8d037ebb9e98bf69929ea0301da2a0e044a93469e48f3161f00fcd804a3f85df61a968597fc44bd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iKYEAREIAGYFAlWrmmFfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOhLKACeK6sT5wcJ7nHFfQR8+MR5A/AH
-yxAAmwT7/8uxRMxN5WlC8TW28+8+P+h0
-=lxmT
+iQJ8BAEBCABmBQJVsqjFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO0JwP/3w0/IR0z8jtNwROWlZWyLcP
+DhhdFLNWoULzJlyYm5GCE84KwteR9Tv0bPLN3jQc4QHpHBVVVw9R/VEqJ3w03yHi
+VeoEpDyPQKvflBdocxGa5TA4QsAO3wfOM9Btm23AA8SEyq5jr+8441+4NqAX43yw
+wc3IL0nHY/X7EW3T+UYoAg4z/8evkYeMS8EpUjWnqhrWZ3k9nSHcnAkM99Eprcjy
+YT8ZjjxPHmsanWt62rFTyAzToFZkKhTi0qdD8e0vufwC6gpQ3uW2iUBoVtWnk6kF
+8eVAQ2aHLIXvuwbKp8IAFLa6/SsV5DhgUZmvalc49Cpdhpo8HeE8zUL8e6+/VaDk
+Y2YwEZDzI7rkfCRWrKTJBvnGZlTnU2sZuhiM2e6Frl2H1mHlwIX5eLKsw6x8kjVW
+jMSx+eJmTiiNEvSod2BSrWRQGG0cZwEzNA+lZa3XJ2CcT00beu7ZSk07tWeALdOv
+ULz97tVO93XaE5LHoAkprA5mNhXy+OW0K+LbjsnZme6alc/wq7hIrnQEzlHQWL27
+WBde7ouTmTPXqR50NFf0rNY/YMpaztm/yzLwcK6v8AkDPAe3zV7quzTsDd+li/E6
+aGTTW8aqrUOvtwN+5ec+rT5C7457S8ZOk7ZJtQEmNUBEcVMSDg43MozRFZAhpZAD
++UDLSWQDHAJGd+XtahEY
+=CUmD
 -----END PGP SIGNATURE-----
