@@ -1,6 +1,11 @@
 # ChangeLog for xfce-base/xfdesktop
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.262 2015/07/19 12:38:56 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.263 2015/07/24 21:06:11 mgorny Exp $
+
+*xfdesktop-4.12.3 (24 Jul 2015)
+
+  24 Jul 2015; Michał Górny <mgorny@gentoo.org> +xfdesktop-4.12.3.ebuild:
+  Version bump with bugfixes and translation updates.
 
   19 Jul 2015; Tobias Klausmann <klausman@gentoo.org> xfdesktop-4.12.2.ebuild:
   Stable on alpha, bug 553500
